--- a/README
+++ b/README
@@ -151,7 +151,7 @@ For more details about version numbers, see:
     http://www.gnu.org/software/libtool/contribute.html
 
 -- 
-Copyright (C) 2004 Free Software Foundation, Inc.
+Copyright (C) 2004, 2005 Free Software Foundation, Inc.
 
 The canonical source of this file is maintained with the
 GNU Libtool package.  Report bugs to bug-libtool@gnu.org.
