--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-13  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* libltdl/m4/libtool.m4 (_LT_COMPILER_PIC): Fix my forward port
+	error of last commit.
+
 2006-01-12  Leif Ekblad  <leif@rdos.net>
 
 	* libltdl/m4/libtool.m4 (_LT_SYS_DYNAMIC_LINKER)
