--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-01-21  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* ltmain.in (compile mode): Also transform `.obj' correctly.
+	Reported by George Bosilca <bosilca@cs.utk.edu>.
+
 2006-01-12  Leif Ekblad  <leif@rdos.net>
 
 	* libtool.m4 (AC_LIBTOOL_SYS_DYNAMIC_LINKER)
