--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* commit, mailnotify: Bump copyright years.
+
 2006-01-21  Eric Blake  <ebb9@byu.net>
 
 	* THANKS: Move myself to contributor.
