--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2006-01-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* libltdl/config/ltmain.m4sh (func_mode_link): Fix matching
+	duplicate run path entries with the correct separator.
+
 	* tests/testsuite.at (PREPARE_TESTS): Escape `^' for some older
 	shells.
 
