--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-30  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* doc/libtool.texi (titlepage): Remove superfluous word.
+
 2006-01-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* commit, mailnotify: Bump copyright years.
