--- a/doc/libtool.texi
+++ b/doc/libtool.texi
@@ -29,7 +29,7 @@ Copyright (C) 1996-2003, 2005 Free Software Foundation, Inc.
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.1
 or any later version published by the Free Software Foundation;
-with the no Invariant Sections, with no Front-Cover Texts,
+with no Invariant Sections, with no Front-Cover Texts,
 and with no Back-Cover Texts.  A copy of the license is included in
 the section entitled "GNU Free Documentation License".
 
@@ -56,7 +56,7 @@ Copyright @copyright{} 1996-2003 Free Software Foundation, Inc.
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.1
 or any later version published by the Free Software Foundation;
-with the no Invariant Sections, with no Front-Cover Texts,
+with no Invariant Sections, with no Front-Cover Texts,
 and with no Back-Cover Texts.  A copy of the license is included in
 the section entitled "GNU Free Documentation License".
 
