--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-09  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* Makefile.am ($(TESTSUITE)): Also depend on `Makefile.am'.
+	Write to temporary file and rename.
+
 2006-02-05  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	* Makefile.am (EXTRA_DIST): Add `$(srcdir)/' to all generated
