--- a/THANKS
+++ b/THANKS
@@ -87,6 +87,7 @@
   Ian Lance Taylor		ian@cygnus.com
   Jacob Meuser			jakemsr@jakemsr.com
   Jeff Squyres			jsquyres@lam-mpi.org
+  Jeremy C. Reed		reed@reedmedia.net
   Joel N. Weber II		devnull@gnu.org
   Joseph Beckenbach III		jrb3@best.com
   Kenneth Albanowski		kjahds@kjahds.com
