--- a/THANKS
+++ b/THANKS
@@ -89,6 +89,7 @@
   Jeff Squyres			jsquyres@lam-mpi.org
   Jeremy C. Reed		reed@reedmedia.net
   Joel N. Weber II		devnull@gnu.org
+  Joerg Sonnenberger		joerg@netbsd.org
   Joseph Beckenbach III		jrb3@best.com
   Kenneth Albanowski		kjahds@kjahds.com
   Kevin Ryde			user42@zip.com.au
